--- a/src/meson.build
+++ b/src/meson.build
@@ -1,9 +1,2 @@
-pbf_sources = [
-  'pbf_main.c',
-  'pbf_args.c',
-  'pbf_chunk.c',
-  'pbf_compiler.c',
-  'pbf_vm.c'
-]
-
-executable('pbf', pbf_sources)
+subdir('libpowerbf')
+subdir('cli')
